--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-slack-bolt==1.19.0
-python-dotenv==1.0.1
-google-generativeai==0.7.2
-
+slack-bolt
+python-dotenv
+fastapi
+uvicorn
+google-generativeai
